themes/documentation/css/main.css
/* ... */
  .HomepageTitle.Container,
  .HomepageButtons {
    display: none;
  }

  .HomepageTitle h2 {
      width: 80%;
      font-size: 30px;
      margin: 20px auto;
      text-align: center;
  }

  .HomepageButtons {
      padding: 20px 0;
      background-color: #c5c5cb;
      text-align: center;
  }

  .HomepageButtons:after,
  .HomepageButtons:before {
      content: " ";
      display: table;
  }

  .HomepageButtons:after {
      clear: both;
  }

  .HomepageButtons .Button--hero {
      padding: 20px 30px;
      border-radius: 0;
      text-shadow: none;
      opacity: .8;
      margin: 0 10px;
      text-transform: uppercase;
      border: 5px solid #3f4657;
      font-family: "Roboto Slab", -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
      font-weight: 700;
      background-image: none;
      -webkit-filter: none;
      filter: none;
      box-shadow: none;
  }

  .HomepageButtons .Button--hero:hover {
      opacity: 1;
  }

  .HomepageButtons .Button--hero.Button--primary {
      background-color: #3f4657;
      color: #f7f7f7;
  }

  .HomepageContent {
      background-color: #fafafa;
      padding: 40px 0;
  }

  .HomepageFooter {
      background-color: #3f4657;
      color: #82becd;
      border: 0;
      box-shadow: none;
  }

  .HomepageFooter:after,
  .HomepageFooter:before {
      content: " ";
      display: table;
  }

  .HomepageFooter:after {
      clear: both;
  }

  /* # Heading */
  .homepage .doc_content {
    padding: 0;
  }

  #docsSearch {
    border: 0;
    text-align: center;
    padding: 80px 10px 85px 10px;
    margin-top: 30px;
    margin-bottom: 70px;
  }

  #docsSearch::before {
    content: '';
    position: absolute;
    background-color: #fff;
    width: 100%;
    height: 420px;
    z-index: 0;
    top: 0;
    left: 0;
  }

  #docsSearch h1 {
      position: relative;
      line-height: 38px;
      color: #1a1a1a;
      font-size: 36px;
      font-weight: 700;
      margin-bottom: 1.2rem;
  }

  #docsSearch .caption {
      position: relative;
      color: #999;
      font-size: 22px;
      font-weight: 300;
      display: block;
      margin-bottom: 1rem;
      line-height: 30px;
  }
  
  /* # Search */
  #docsSearch #searchBar .search-query {
      width: 100%;
      background-color: white;
      border: 1px solid #e6e6e6;
      outline: none;
      -webkit-box-shadow: none;
      box-shadow: none;
      -webkit-border-radius: 0;
      border-radius: 0;
      height: 60px;
      color: #999;
      font-size: 22px;
      font-weight: 400;
      line-height: 18px;
      padding: 0px 20px;
      line-height: 1.2;
  }

  #docsSearch #searchBar {
      width: 65%;
      position: relative;
  }

  #docsSearch #searchBar button {
      background: #fff;
      color: #ccc;
      font-size: 18px;
      font-weight: 400;
      line-height: 18px;
      text-shadow: none;
      border: 0;
      height: 58px;
      top: 50%;
      transform: translateY(-50%);
      border-left: 1px solid #e6e6e6;
      border-right: 1px solid #e6e6e6;
      transition: all 0.2s linear;
      padding: 0;
      position: absolute;
      right: 0;
      width: 60px;
      cursor: pointer;
  }

  #docsSearch #searchBar button svg {
      transition: .3s ease;
  }

  #docsSearch #searchBar button:hover svg {
      fill: #d64444;
  }

  #docsSearch #searchBar button:focus {
      outline: none;
  }

  #docsSearch #searchBar button:hover {
      background: #fff;
  }

  /* # Category */
  .category-list {
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin-bottom: 20px;
    padding: 0 10px;
  }

  /* .category-list::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #fafafa;
    top: 115%;
    left: 0;
  } */

  .category-list .category-wrap {
    display: flex;
    width: 25%;
    padding: 0 15px;
    box-sizing: border-box;
    margin-bottom: 23px;
  }

  .category-list .category {
    display: inline-block;
    padding: 42px 0px;
    width: 100%;
    text-align: center;
    border: 1px solid #f0f0f0;
    margin: 0;
    background-color: #fff;
    transition: all 0.2s linear;
  }

  .category-list .category:hover {
    background-color: #fff;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.05);
  }

  .category-list .category:hover:before {
    color: #d64444;
  }

  .category-list .category h3 {
    font-weight: 400;
    line-height: 20px;
    color: #1a1a1a;
    font-size: 20px;
    margin: 0;
    margin-bottom: 3px;
  }

  .category-list .category p {
    margin: 0;
  }

  .category-list .category .article-count {
    font-weight: 400;
    line-height: 20px;
    color: #d64444;
    font-size: 13px;
    margin: 0;
  }

  /* # Footer */
  footer {
      font-size: 16px;
      font-weight: 400;
      line-height: 20px;
      color: #999;
  }

  footer a {
      color: #d34746;
  }

  footer a:hover {
      text-decoration: underline;
      color: #d50000;
  }

  footer div {
      text-align: center;
      margin: 0;
  }

/* 6. Content page */
  /* # Columns settings */
  .Columns__left {
      background-color: #f7f7f7;
      display: flex;
      flex-wrap: wrap;
  }

  .Columns__right__content {
      padding: 10px;
      background-color: #fafafa;
  }

  .doc_content {
      background-color: #fafafa;
      padding: 10px;
      border-radius: 10px;
  }

  .Columns .doc_content {
      background-color: #fff;
  }

  .Collapsible__content,
  .s-content pre code:after,
  .s-content pre code:before {
      display: none;
  }

  .Columns__left .Collapsible__trigger {
      margin: 0;
      padding: 7px 20px;
      background-color: #d64444;
      border: 0;
      float: right;
      background-image: none;
      -webkit-filter: none;
      filter: none;
      box-shadow: none;
      outline: none;
      border-radius: 0;
  }
/* ... */

